Java 17 switch object