@@ -5,8 +5,8 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>geometry</name>
    <properties>
-  	<maven.compiler.target>11</maven.compiler.target>
-  	<maven.compiler.source>11</maven.compiler.source>
+  	<maven.compiler.target>17</maven.compiler.target>
+  	<maven.compiler.source>17</maven.compiler.source>
   </properties>
   <dependencies>
 	  <dependency>
@@ -27,6 +27,11 @@
 	    <version>5.9.0</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+	    <groupId>jakarta.validation</groupId>
+	    <artifactId>jakarta.validation-api</artifactId>
+	    <version>3.0.2</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
@@ -34,7 +39,21 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.22.2</version>
+            <configuration>
+            	<argLine>--enable-preview</argLine>
+        	</configuration>
         </plugin>
+        <plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<version>3.10.1</version>
+	        <configuration>
+	          <release>17</release>
+	          <compilerArgs>
+	             --enable-preview
+	          </compilerArgs>
+	        </configuration>
+	      </plugin>
     </plugins>
 </build>
 </project>
